[project]
name = "vnautils"
version = "0.1.0"
description = "Simple utilities for working with VNAs and VNA measurements"
authors = [
    {name = "Mike Walters", email = "mike@flomp.net"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

