[project]
name = "vnautils"
version = "0.1.0"
description = "Simple utilities for working with VNAs and VNA measurements"
authors = [
    {name = "Mike Walters", email = "mike@flomp.net"},
]
dependencies = [
    "matplotlib>=3.9.2",
    "scikit-rf>=1.3.0",
    "typing-extensions>=4.12.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
plot_touchstone = "vnautils.plot_touchstone:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
