[project]
name = "vnautils"
version = "0.1.0"
description = "Simple utilities for working with VNAs and VNA measurements"
authors = [
    {name = "Mike Walters", email = "mike@flomp.net"},
]
dependencies = [
    "matplotlib>=3.9.2",
    "scikit-rf>=1.3.0",
    "typing-extensions>=4.12.2",
    "pyvisa>=1.14.1",
    "pyvisa-py>=0.7.2",
    "pyserial>=3.5",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
plot_touchstone = "vnautils.plot_touchstone:main"
pna_librecal = "vnautils.pna_librecal:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
